# middleware/validate.js
@@ -24,7 +24,7 @@ const saveUser = (req, res, next) => {
 const saveGroup = (req, res, next) => {
   const validationRule = {
     name: 'required|string',
-    members:'sometimes|objectIdArray',
+    members: 'sometimes|objectIdArray',
     createdBy: 'required|string',
     createdAt: 'required|date'
   };
@@ -43,12 +43,15 @@ const saveGroup = (req, res, next) => {
 
 const saveTask = (req, res, next) => {
   const validationRule = {
-    name: 'required|string',
-    status:'required|string',
+    title: 'required|string',
+    description: 'required|string',
+    status: 'required|in:To do,In Progress,Done',
+    priority: 'required|in:High,Medium,Low',
+    dueDate: 'required|date',
+    assignedTo: 'required|string',
     createdBy: 'required|string',
+    goalId: 'sometimes|mongoId',
     createdAt: 'required|date',
-    finishDate: 'string',
-    goalId: 'mongoId',
   };
   validator(req.body, validationRule, {}, (err, status) => {
     if (!status) {
@@ -65,10 +68,14 @@ const saveTask = (req, res, next) => {
 
 const saveGoal = (req, res, next) => {
   const validationRule = {
-    name: 'required|string',
-    status:'required|string',
+    title: 'required|string',
+    description: 'required|string',
+    status: 'required|in:To do,In Progress,Done',
+    groupId: 'sometimes|mongoId',
+    taskIds: 'sometimes|objectIdArray',
     createdBy: 'required|string',
     createdAt: 'required|date',
+    dueDate: 'required|date'
   };
   validator(req.body, validationRule, {}, (err, status) => {
     if (!status) {
